--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
         <br><p>No good finished levels yet :(</p></div></legend>
         <br><br>
                 <div id="unfinished"><h3>Unfinished levels:</h3>
-        <br><h4>The time</h4><p>A level where you go to diffrent times in GD...</p><br><a href="thetimenocoin.mp4" target="_blank">Showcase</a><br><a href="thetimecoin.mp4" target="_blank">Showcase with coin</a></div></legend>
+        <br><h4>The time</h4><p>A level where you go to diffrent times in GD...</p><br><a href="https://drive.google.com/file/d/1xcbm-VwRnHNnyob0zhzeP0JFECUGadUU/view?usp=sharing" target="_blank">Showcase</a><br><a href="https://drive.google.com/file/d/1_qpJ3SnmJnlM_lWHGcP_OJDXV-KBkmbY/view?usp=sharing" target="_blank">Showcase with coin</a></div></legend>
     </body>
 </html>
